<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/search_form_top_bottom_margin"
    android:layout_marginTop="@dimen/search_form_top_bottom_margin"
    android:layout_marginLeft="@dimen/search_form_side_margin"
    android:layout_marginRight="@dimen/search_form_side_margin"
    android:layout_marginStart="@dimen/search_form_side_margin"
    android:layout_marginEnd="@dimen/search_form_side_margin"
    android:orientation="vertical"
    tools:context="com.udacity.ak.localroots.ui.fragment.SearchFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/market_search_title" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_search"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_margin">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/search_form_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_zipcode"
                    android:layout_width="0dp"
                    android:layout_weight=".80"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/zipcode_tv_size"
                    android:maxLength="@integer/zipcode_length"
                    android:hint="@string/zipcode_hint"
                    android:inputType="number" />
                <ImageButton
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_search_by_zip"
                    android:layout_width="0dp"
                    android:layout_weight=".20"
                    android:contentDescription="@string/cd_search"
                    android:src="@android:drawable/ic_menu_search"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/search_form_padding"
                style="?android:attr/textAppearanceSmall"
                android:text="@string/text_or" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/search_form_padding"
                android:textAllCaps="false"
                style="?android:attr/textAppearanceButton"
                android:id="@+id/btn_search_by_loc"
                android:text="@string/search_by_location" />
        
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
