<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small"
    tools:context="com.udacity.ak.localroots.ui.fragment.DetailFragment">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:focusable="true"
        android:contentDescription="@string/cd_favorite_fab"
        android:src="@android:drawable/btn_star_big_off" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <TextView
                    android:id="@+id/tv_marketname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_small"
                    style="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/address_label"
                    style="?android:attr/textAppearanceListItem"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    style="?android:attr/textAppearanceListItemSmall"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/margin_small"
                    android:text="@string/schedule_label"
                    android:paddingStart="@dimen/margin_small"
                    style="?android:attr/textAppearanceListItem"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    style="?android:attr/textAppearanceListItemSmall" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/products_label"
                    style="?android:attr/textAppearanceListItem"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    style="?android:attr/textAppearanceListItemSmall" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>